--- a/xyresult.html
+++ b/xyresult.html
@@ -315,7 +315,7 @@
 
               <!--startprint-->
               <div id="printHtml" style="display: flex;flex-direction: column; justify-content: center; align-items: center;">
-                <h2 style="margin:10px 0;color: #3fb4a5;text-align: center;font-size: 24px;">全国民办院校学生学业证书查询结果</h2>
+                <h2 class='tableTitle'>全国民办院校学生学业证书查询结果</h2>
                   <table style="margin: 0 auto; border-color: #ececec;text-align: center;"  width="70%" border="1" cellpadding="0" cellspacing="0">
                     <tr>
                       <td width='12%' height='40px'>姓名</td>
@@ -456,7 +456,7 @@
       </table>
     </div>
     <!-------------------------------------------主题内容结束------------------------------------------->
-    <!-- <script>
+    <script>
       $(function () {
         if ($('.tableTitle').length > 0) {
           $('#aaa').css('display', 'none');
@@ -466,7 +466,7 @@
 
         }
       })
-    </script> -->
+    </script>
   </div>
   </div>
   </div>
