--- a/xyresult.html
+++ b/xyresult.html
@@ -307,7 +307,7 @@
           <tr>
 
             <td valign="middle" align="center">
-              <div id="aaa" style="display:none;text-align: center;width: 100%;height: 200px;">
+              <div id="aaa" style="text-align: center;width: 100%;height: 200px;">
                 <h2 style="color: red;text-align: center;margin-top: 150px;font-size: 30px;">抱歉，暂无此编号信息！或搜索信息有误！</h2>
                 <a href="javascript:history.go(-1);"
                   style="text-align: center;text-decoration: none;font-size: 20px;">返回查询页面</a>
@@ -456,7 +456,7 @@
       </table>
     </div>
     <!-------------------------------------------主题内容结束------------------------------------------->
-    <script>
+    <!-- <script>
       $(function () {
         if ($('.tableTitle').length > 0) {
           $('#aaa').css('display', 'none');
@@ -466,7 +466,7 @@
 
         }
       })
-    </script>
+    </script> -->
   </div>
   </div>
   </div>
